@@ -51,7 +51,6 @@
 
 		<!-- Apache Commons -->
 		<dependency>
-			<!-- Also add signature "commons-io-unsafe-<ver>" to forbiddenapis plugin -->
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
@@ -142,6 +141,27 @@
 
 	</dependencies>
 
+	<!-- https://github.com/x-stream/xstream/issues/253 -->
+	<profiles>
+		<profile>
+			<id>surefire-java16</id>
+			<activation>
+				<jdk>[16,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<build>
 
 		<!-- =============================================================== -->
@@ -161,50 +181,6 @@
 					</excludes>
 				</configuration>
 			</plugin>
-
-			<!-- Maven Enforcer Plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-enforcer-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>enforce-ban-duplicate-classes</id>
-						<configuration>
-							<rules>
-								<banDuplicateClasses>
-									<ignoreClasses>
-										<!--
-											Both classes are provided by xmlpull
-											and xpp3_min which are both required
-											by xstream. Nothing we can do about
-											it :(
-
-											com.thoughtworks.xstream:xstream:jar:1.4.8:compile
-											+- xmlpull:xmlpull:jar:1.1.3.1:compile
-											\- xpp3:xpp3_min:jar:1.1.4c:compile
-										-->
-										<ignoreClass>org.xmlpull.v1.XmlPullParser</ignoreClass>
-										<ignoreClass>org.xmlpull.v1.XmlPullParserException</ignoreClass>
-									</ignoreClasses>
-								</banDuplicateClasses>
-							</rules>
-							<fail>true</fail>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Forbidden APIs -->
-			<plugin>
-				<groupId>de.thetaphi</groupId>
-				<artifactId>forbiddenapis</artifactId>
-				<configuration>
-					<bundledSignatures combine.children="append">
-						<bundledSignature>commons-io-unsafe-1.4</bundledSignature>
-					</bundledSignatures>
-				</configuration>
-			</plugin>
-
 		</plugins>
 	</build>
 </project>
